ready for presentation

--- a/convert_to_midi.ipynb
+++ b/convert_to_midi.ipynb
@@ -116,12 +116,12 @@
    "source": [
     "# 2.0 load arrays from file\n",
     "\n",
-    "data_id = '_15s_100hz'\n",
-    "train_labels = np.load(\"data/dataset\" + data_id + \"/train_labels\" + data_id + \".npy\", allow_pickle=True)\n",
+    "# data_id = '_15s_100hz'\n",
+    "# train_labels = np.load(\"data/dataset\" + data_id + \"/train_labels\" + data_id + \".npy\", allow_pickle=True)\n",
     "\n",
-    "print (\"train_labels.shape: \", train_labels.shape)\n",
+    "# print (\"train_labels.shape: \", train_labels.shape)\n",
     "\n",
-    "midi_file = convert_array_to_midi(train_labels[0], length_seconds=15, tempo=500_000)\n",
+    "# midi_file = convert_array_to_midi(train_labels[0], length_seconds=15, tempo=500_000)\n",
     "#midi_file.save('data/midi/test_midi_file.mid')"
    ]
   }
