--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -359,7 +359,6 @@
     "            if (sum >= 0.5):\n",
     "                segment[inst] = 1\n",
     "        midi_segments.append(segment)\n",
-    "    midi_segments = np.array(midi_segments, dtype='int64')\n",
     "    return midi_segments\n",
     "\n",
     "def remove_leading_silence(wav_array):\n",
@@ -376,8 +375,8 @@
     "def show_midi_plot(midi_array):\n",
     "    midi_array = np.flip(midi_array.T, axis=0)\n",
     "    f = plot.figure()\n",
-    "    f.set_figwidth(20)\n",
-    "    f.set_figheight(10)\n",
+    "    f.set_figwidth(10)\n",
+    "    f.set_figheight(5)\n",
     "    plot.imshow(midi_array, cmap='binary', interpolation='None', aspect=\"auto\")\n",
     "    plot.show()\n",
     "    return f\n",
@@ -385,8 +384,8 @@
     "def show_spectrograph(spec_array):\n",
     "    spec_array = np.flip(spec_array.T, axis=0)\n",
     "    f = plot.figure()\n",
-    "    f.set_figwidth(20)\n",
-    "    f.set_figheight(10)\n",
+    "    f.set_figwidth(10)\n",
+    "    f.set_figheight(5)\n",
     "    plot.imshow(spec_array, cmap='magma', interpolation='None', aspect=\"auto\")\n",
     "    plot.show()\n",
     "    \n",
@@ -394,22 +393,26 @@
     "    midi_array = np.flip(midi_array.T, axis=0)\n",
     "    spec_array = np.flip(spec_array.T, axis=0)\n",
     "    fig = plot.figure()\n",
-    "    fig.set_figwidth(20)\n",
-    "    fig.set_figheight(10)\n",
+    "    fig.set_figwidth(10)\n",
+    "    fig.set_figheight(5)\n",
     "    plot.imshow(spec_array, 'magma', interpolation='None', aspect=\"auto\")\n",
     "    plot.imshow(midi_array, 'binary', interpolation='None', alpha=0.5, aspect=\"auto\")\n",
     "    plot.show()\n",
     "\n",
-    "def get_data_segs(data_index, frames, segment_length, window_length, overlap, print_out=False):\n",
+    "def get_data_segs(data_index, segment_length, window_length, hop_length, overlap, print_out=False):\n",
     "    # load in midi file\n",
     "    midi_file_path = \"data/groove/\" + data_index.midi_filename\n",
     "    midi = mido.MidiFile(midi_file_path)\n",
     "    \n",
     "    # convert midi to array\n",
     "    midi_array = mid2array(midi)\n",
+    "    if print_out:\n",
+    "        show_midi_plot(midi_array)\n",
     "    calculated_length = mido.tick2second(midi_array.shape[0], ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
     "    # reformat midi array for training\n",
     "    midi_array = reformat_midi(midi_array)\n",
+    "    if print_out:\n",
+    "        show_midi_plot(midi_array)\n",
     "    # cut leading zeros\n",
     "    midi_array, leading_zeros, ending_zeros = cut_leading_ending_zeros(midi_array)\n",
     "    leading_removed = mido.tick2second(leading_zeros, ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
@@ -422,6 +425,7 @@
     "        print ('ending removed: ', ending_removed)\n",
     "        print ('new_midi duration: ', new_midi_duration)\n",
     "        print (\"removed starting zeros midi_array.shape: \", midi_array.shape)\n",
+    "        show_midi_plot(midi_array)\n",
     "    # slice into segments of equal size\n",
     "    ticks_per_sec = int(mido.second2tick(segment_length, ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm)))\n",
     "    if print_out:\n",
@@ -430,7 +434,7 @@
     "    if print_out:\n",
     "        print ('len(midi_segments): ', len(midi_segments))\n",
     "    if print_out:\n",
-    "        show_midi_plot(midi_segments)\n",
+    "        show_midi_plot(np.array(midi_segments, dtype='int32'))\n",
     "\n",
     "\n",
     "    # load in wav file\n",
@@ -459,47 +463,91 @@
     "        wav_file = resized_wav_file[0]\n",
     "        wav_file.export(audio_file_path, format=\"wav\")\n",
     "    \n",
-    "    # show wav file spec\n",
-    "    if print_out:\n",
-    "        freqs, times, amps = wav_file.spectrogram(window_length_s=window_length, overlap=overlap)\n",
-    "        amps = 10 * np.log10(amps + 1e-9)\n",
-    "        plot.pcolormesh(times, freqs, amps)\n",
-    "        plot.xlabel(\"Time in Seconds\")\n",
-    "        plot.ylabel(\"Frequency in Hz\")\n",
-    "        plot.show()\n",
+    "    # # show wav file spec\n",
+    "    # if print_out:\n",
+    "    #     freqs, times, amps = wav_file.spectrogram(window_length_s=window_length, overlap=overlap)\n",
+    "    #     amps = 10 * np.log10(amps + 1e-9)\n",
+    "    #     plot.pcolormesh(times, freqs, amps)\n",
+    "    #     plot.xlabel(\"Time in Seconds\")\n",
+    "    #     plot.ylabel(\"Frequency in Hz\")\n",
+    "    #     plot.show()\n",
     "    \n",
     "    diced_wav_file = wav_file.dice(segment_length, zero_pad=True)\n",
     "    while len(diced_wav_file) > len(midi_segments):\n",
     "        diced_wav_file.pop()\n",
-    "    if print_out:\n",
-    "        print ('diced wav len: ', len(diced_wav_file))\n",
+    "    while len(midi_segments) > len(diced_wav_file):\n",
+    "        midi_segments.pop()\n",
+    "    # convert midi segments to np array\n",
+    "    midi_segments = np.array(midi_segments, dtype='int32')\n",
     "    \n",
     "    # apply mel filer to audio segments\n",
     "    formated_audio = []\n",
     "    for seg in diced_wav_file:\n",
-    "        freqs, times, spec = seg.spectrogram(window_length_s=window_length, overlap=overlap)\n",
-    "        # if print_out:\n",
-    "        #     freqs, times, spec = signal.spectrogram(seg.to_numpy_array())\n",
-    "        #     spec = 10 * np.log10(spec + 1e-9)\n",
-    "        #     plot.pcolormesh(times, freqs, spec)\n",
-    "        #     plot.xlabel(\"Time in Seconds\")\n",
-    "        #     plot.ylabel(\"Frequency in Hz\")\n",
-    "        #     plot.show()\n",
-    "        #     print ('freqs: ', len(freqs), ' times: ', len(times), ' amps: ', len(amps))\n",
-    "        # print ('amps type: ', type(spec), ' amps shape: ', spec.shape)\n",
-    "        normalized_data = (spec-np.min(spec))/(np.max(spec)-np.min(spec))\n",
-    "        formated_audio.append(normalized_data)\n",
+    "        seg_np = seg.to_numpy_array()\n",
+    "        seg_np = seg_np - seg_np.mean()\n",
+    "        seg_np = np.append(seg_np[0],seg_np[1:]-.97*seg_np[:-1])\n",
+    "        \n",
+    "        #print ('seg_np.shape: ', seg_np.shape)\n",
+    "        \n",
+    "        n_fft = 2048\n",
+    "        \n",
+    "        # compute mel spectrogram\n",
+    "        stft = librosa.stft(seg_np, n_fft=n_fft, hop_length=hop_length, win_length=window_length, window=signal.hamming)\n",
+    "        spec = np.abs(stft)**2\n",
+    "        \n",
+    "        #print ('spec.shape: ', spec.shape)\n",
+    "        \n",
+    "        mel_basis = librosa.filters.mel(sr=default_sample_rate, n_fft=n_fft, n_mels=32, fmin=0, fmax=20000)\n",
+    "        melspec = np.dot(mel_basis, spec)\n",
+    "        logspec = librosa.power_to_db(melspec, ref=np.max)\n",
+    "        logspec = np.transpose(logspec)\n",
+    "        \n",
+    "        #print ('logspec.shape: ', logspec.shape)\n",
+    "        \n",
+    "        if print_out:\n",
+    "            plot.imshow(logspec, origin='lower', aspect='auto')\n",
+    "            plot.show()\n",
+    "\n",
+    "        formated_audio.append(logspec)\n",
     "    formated_audio_array = np.array(formated_audio, dtype='float32')\n",
-    "    \n",
-    "    # reshape into frames\n",
-    "    rem = formated_audio_array.shape[0] % frames\n",
-    "    if rem != 0:\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    if print_out:\n",
-    "        print ('formated_audio_array.shape: ', formated_audio_array.shape)\n",
+    "    #print ('formated_audio_array.shape: ', formated_audio_array.shape)\n",
     "    return formated_audio_array, midi_segments\n",
+    "    \n",
+    "    # # reshape into frames\n",
+    "    # if midi_segments.shape[0] == formated_audio_array.shape[0]:\n",
+    "    #     framed_audio_list = []\n",
+    "    #     final_element_index = int(midi_segments.shape[0] - 1)\n",
+    "    #     for i, seg in enumerate(midi_segments):\n",
+    "    #         frames = []\n",
+    "    #         if i == 0:\n",
+    "    #             frames.append(formated_audio_array[0])\n",
+    "    #             frames.append(formated_audio_array[1])\n",
+    "    #             frames.append(formated_audio_array[2])\n",
+    "    #         elif i == final_element_index:\n",
+    "    #             frames.append(formated_audio_array[final_element_index - 2])\n",
+    "    #             frames.append(formated_audio_array[final_element_index - 1])\n",
+    "    #             frames.append(formated_audio_array[final_element_index])\n",
+    "    #         else:\n",
+    "    #             frames.append(formated_audio_array[i-1])\n",
+    "    #             frames.append(formated_audio_array[i])\n",
+    "    #             frames.append(formated_audio_array[i+1])\n",
+    "            \n",
+    "    #         frames_np = np.array(frames, dtype='float32')\n",
+    "    #         framed_audio_list.append(frames_np)\n",
+    "            \n",
+    "    #     framed_audio_array = np.array(framed_audio_list, dtype='float32')\n",
+    "    # else:\n",
+    "    #     return formated_audio_array, midi_segments\n",
+    "    \n",
+    "    # if print_out:\n",
+    "    #     print ('midi_segments.shape: ', midi_segments.shape)\n",
+    "    #     print ('framed_audio_array.shape: ', framed_audio_array.shape)\n",
+    "    # return framed_audio_array, midi_segments\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \n",
     "def index_to_arrays(csv_index, segment_length, window_size, window_stride):\n",
     "    # load in wav file\n",
@@ -598,18 +646,20 @@
     "np.set_printoptions(suppress=True)\n",
     "\n",
     "DEV_MODE = True\n",
-    "SEGMENT_LEN = 0.05 # length of each segment in seconds\n",
-    "WINDOW_LEN = SEGMENT_LEN / 32\n",
-    "OVERLAP = 0.25\n",
+    "# these values define the resolution of the data\n",
+    "SEGMENT_LEN = 0.1 # length of each segment in seconds\n",
+    "WINDOW_LEN = 1024\n",
+    "HOP_LEN = 280\n",
+    "OVERLAP = 0.5\n",
     "\n",
     "if DEV_MODE:\n",
     "    # get complete list of train feats / labels\n",
     "    \n",
     "    dev_csv = []\n",
     "    dev_csv.append(train_csv[1])\n",
-    "    dev_csv.append(train_csv[100])\n",
-    "    dev_csv.append(train_csv[400])\n",
-    "    \n",
+    "    dev_csv.append(train_csv[2])\n",
+    "    dev_csv.append(train_csv[3])\n",
+    "    dev_csv.append(train_csv[4])\n",
     "    \n",
     "    startTime = time.time()\n",
     "    feats_list = []\n",
@@ -617,16 +667,18 @@
     "\n",
     "    for i, index in enumerate(tqdm(dev_csv)):\n",
     "        print ('\\n', i, \" file: \", index.audio_filename, \" \", index.duration, \"sec bpm: \", index.bpm)\n",
-    "        feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=True)\n",
-    "        for j in range(len(feats)):\n",
-    "            # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
-    "            # show_midi_plot(labels[j])\n",
-    "            # show_spectrograph(feats[j])\n",
-    "            # show_midi_over_spec(feats[j], labels[j])\n",
-    "            print ('feats: ', feats)\n",
-    "            print ('labels: ', labels)\n",
-    "            feats_list.append(feats[j])\n",
-    "            labels_list.append(labels[j])\n",
+    "        feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=True)\n",
+    "        print ('feats.shape: ', feats.shape, ' labels.shape: ', labels.shape)\n",
+    "        if (feats.shape[0] == labels.shape[0]):\n",
+    "            for j in range(len(feats)):\n",
+    "                # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
+    "                # show_midi_plot(labels[j])\n",
+    "                # show_spectrograph(feats[j])\n",
+    "                # show_midi_over_spec(feats[j], labels[j])\n",
+    "                # print ('feats: ', feats)\n",
+    "                # print ('labels: ', labels)\n",
+    "                feats_list.append(feats[j])\n",
+    "                labels_list.append(labels[j])\n",
     "    # make into numpy arrays\n",
     "    feats_array = np.array(feats_list, dtype='float64')\n",
     "    labels_array = np.array(labels_list, dtype='int64')\n",
@@ -703,14 +755,14 @@
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "# data id (used to make different datasets)\n",
-    "data_id = '_0.05seg_div32win_0.25ol'\n",
+    "data_id = '_32x16'\n",
     "print (\"DATASET ID: \", data_id)\n",
     "\n",
     "# these values define the resolution of the data\n",
-    "SEGMENT_LEN = 0.05 # length of each segment in seconds\n",
-    "WINDOW_LEN = SEGMENT_LEN / 32\n",
-    "OVERLAP = 0.25\n",
-    "FRAMES = 8\n",
+    "SEGMENT_LEN = 0.1 # length of each segment in seconds\n",
+    "WINDOW_LEN = 1024\n",
+    "HOP_LEN = 280\n",
+    "OVERLAP = 0.5\n",
     "\n",
     "# reset temp folder\n",
     "reset_temp_folder()\n",
@@ -735,14 +787,15 @@
     "\n",
     "for i, index in enumerate(tqdm(train_csv)):\n",
     "    # print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, FRAMES, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
-    "    for j in range(len(feats)):\n",
-    "        # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
-    "        # show_midi_plot(labels[j])\n",
-    "        # show_spectrograph(feats[j])\n",
-    "        # show_midi_over_spec(feats[j], labels[j])\n",
-    "        train_feats.append(feats[j])\n",
-    "        train_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
+    "    if (feats.shape[0] == labels.shape[0]):\n",
+    "        for j in range(len(feats)):\n",
+    "            # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
+    "            # show_midi_plot(labels[j])\n",
+    "            # show_spectrograph(feats[j])\n",
+    "            # show_midi_over_spec(feats[j], labels[j])\n",
+    "            train_feats.append(feats[j])\n",
+    "            train_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "train_feats = np.array(train_feats, dtype='float32')\n",
     "train_labels = np.array(train_labels, dtype='int32')\n",
@@ -771,11 +824,12 @@
     "test_labels = []\n",
     "for i, index in enumerate(tqdm(test_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
-    "    for j in range(len(feats)):\n",
-    "        # show_midi_over_spec(feats[j], labels[j])\n",
-    "        test_feats.append(feats[j])\n",
-    "        test_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
+    "    if (feats.shape[0] == labels.shape[0]):\n",
+    "        for j in range(len(feats)):\n",
+    "            # show_midi_over_spec(feats[j], labels[j])\n",
+    "            test_feats.append(feats[j])\n",
+    "            test_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "test_feats = np.array(test_feats, dtype='float32')\n",
     "test_labels = np.array(test_labels, dtype='int32')\n",
@@ -801,11 +855,12 @@
     "val_labels = []\n",
     "for i, index in enumerate(tqdm(validation_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
-    "    for j in range(len(feats)):\n",
-    "        # show_midi_over_spec(feats[j], labels[j])\n",
-    "        val_feats.append(feats[j])\n",
-    "        val_labels.append(labels[j])\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, HOP_LEN, OVERLAP, print_out=False)\n",
+    "    if (feats.shape[0] == labels.shape[0]):\n",
+    "        for j in range(len(feats)):\n",
+    "            # show_midi_over_spec(feats[j], labels[j])\n",
+    "            val_feats.append(feats[j])\n",
+    "            val_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
     "val_feats = np.array(val_feats, dtype='float32')\n",
     "val_labels = np.array(val_labels, dtype='int32')\n",
