--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras.layers import (Dense, BatchNormalization, ConvLSTM2D, Flatten, Bidirectional)\n",
+    "from tensorflow.keras.layers import (Dense, Dropout, LSTM, Conv2D, Flatten, Bidirectional, MaxPool3D, Reshape)\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -78,16 +78,30 @@
     "\n",
     "def my_model():\n",
     "  model = tf.keras.Sequential()\n",
-    "  model.add(Bidirectional(ConvLSTM2D(filters=64, kernel_size=(5,5), strides=(1,1), return_sequences=True)))\n",
-    "  model.add(BatchNormalization())\n",
-    "  # model.add(Bidirectional(ConvLSTM2D(filters=64, kernel_size=(5,5), strides=(1,1), return_sequences=True)))\n",
-    "  # model.add(BatchNormalization())\n",
-    "  # model.add(ConvLSTM2D(filters=num_hidden, kernel_size=(5,5), strides=(1,1), return_sequences=True))\n",
-    "  # model.add(BatchNormalization())\n",
-    "  # model.add(ConvLSTM2D(filters=num_hidden, kernel_size=(5,5), strides=(1,1), return_sequences=True))\n",
-    "  # model.add(BatchNormalization())\n",
-    "  model.add(Bidirectional(ConvLSTM2D(filters=64, kernel_size=(5,5), strides=(1,1), return_sequences=False)))\n",
-    "  model.add(BatchNormalization())\n",
+    "  \n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
+    "  model.add(Dropout(0.4))\n",
+    "  \n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
+    "  model.add(Dropout(0.4))\n",
+    "  \n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(Conv2D(filters=64, kernel_size=(3,3), strides=(1,1)))\n",
+    "  model.add(MaxPool3D(pool_size=(1, 2, 2)))\n",
+    "  model.add(Dropout(0.4))\n",
+    "  \n",
+    "  model.add(Reshape((48, 64)))\n",
+    "  \n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
+    "  model.add(Bidirectional(LSTM(units=50, activation='tanh')))\n",
+    "  \n",
+    "  model.add(Dropout(0.4))\n",
+    "  \n",
     "  model.add(Flatten())\n",
     "  model.add(Dense(9, activation='sigmoid', name='output'))\n",
     "  return model\n"
@@ -152,7 +166,7 @@
    "source": [
     "# create new model\n",
     "LR = 0.00001\n",
-    "INPUT_SHAPE = (None, 1, 35, 42, 1)\n",
+    "INPUT_SHAPE = (None, 3, 64, 64, 1)\n",
     "\n",
     "model = my_model()\n",
     "model.compile(\n",
@@ -191,7 +205,7 @@
    "outputs": [],
    "source": [
     "# load data and reshape for training\n",
-    "DATA_ID = '_0.05seg_div32win_0.25ol'\n",
+    "DATA_ID = '_64x64x3'\n",
     "\n",
     "train_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats\" + DATA_ID + \".npy\"\n",
     "train_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels\" + DATA_ID + \".npy\"\n",
@@ -222,57 +236,51 @@
     "    print ('val feats.shape: ', val_feats_npy.shape)\n",
     "    print ('val labels.shape: ', val_labels_npy.shape)\n",
     "\n",
-    "    train_feats_npy = train_feats_npy.reshape(train_feats_npy.shape[0], 1, train_feats_npy.shape[1], train_feats_npy.shape[2], 1)\n",
-    "    test_feats_npy = test_feats_npy.reshape(test_feats_npy.shape[0], 1, test_feats_npy.shape[1], test_feats_npy.shape[2], 1)\n",
-    "    val_feats_npy = val_feats_npy.reshape(val_feats_npy.shape[0], 1, val_feats_npy.shape[1], val_feats_npy.shape[2], 1)\n",
+    "    train_feats_npy = train_feats_npy.reshape(train_feats_npy.shape[0], train_feats_npy.shape[1], train_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
+    "    test_feats_npy = test_feats_npy.reshape(test_feats_npy.shape[0], test_feats_npy.shape[1], test_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
+    "    val_feats_npy = val_feats_npy.reshape(val_feats_npy.shape[0], val_feats_npy.shape[1], val_feats_npy.shape[2], train_feats_npy.shape[3], 1)\n",
     "\n",
-    "    print ('train_feats_npy.shape: ', train_feats_npy.shape)\n",
-    "    print ('train_labels_npy.shape: ', train_labels_npy.shape)\n"
+    "    print ('train feats.shape: ', train_feats_npy.shape)\n",
+    "    print ('train labels.shape: ', train_labels_npy.shape)\n",
+    "    \n",
+    "    print ('test feats.shape: ', test_feats_npy.shape)\n",
+    "    print ('test labels.shape: ', test_labels_npy.shape)\n",
+    "    \n",
+    "    print ('val feats.shape: ', val_feats_npy.shape)\n",
+    "    print ('val labels.shape: ', val_labels_npy.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [9], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m reduce_lr \u001b[39m=\u001b[39m keras\u001b[39m.\u001b[39mcallbacks\u001b[39m.\u001b[39mReduceLROnPlateau(monitor\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mval_loss\u001b[39m\u001b[39m\"\u001b[39m, patience\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mdevice(\u001b[39m'\u001b[39m\u001b[39m/GPU:0\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m---> 10\u001b[0m     model\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m     11\u001b[0m         train_feats_npy, \n\u001b[0;32m     12\u001b[0m         train_labels_npy, \n\u001b[0;32m     13\u001b[0m         epochs\u001b[39m=\u001b[39;49mEPOCHS, \n\u001b[0;32m     14\u001b[0m         batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, \n\u001b[0;32m     15\u001b[0m         validation_data\u001b[39m=\u001b[39;49m(val_feats_npy, val_labels_npy), \n\u001b[0;32m     16\u001b[0m         callbacks\u001b[39m=\u001b[39;49m[early_stopping, reduce_lr])\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\utils\\traceback_utils.py:65\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 65\u001b[0m     \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m     66\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\engine\\training.py:1564\u001b[0m, in \u001b[0;36mModel.fit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m   1556\u001b[0m \u001b[39mwith\u001b[39;00m tf\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mexperimental\u001b[39m.\u001b[39mTrace(\n\u001b[0;32m   1557\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1558\u001b[0m     epoch_num\u001b[39m=\u001b[39mepoch,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1561\u001b[0m     _r\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m   1562\u001b[0m ):\n\u001b[0;32m   1563\u001b[0m     callbacks\u001b[39m.\u001b[39mon_train_batch_begin(step)\n\u001b[1;32m-> 1564\u001b[0m     tmp_logs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain_function(iterator)\n\u001b[0;32m   1565\u001b[0m     \u001b[39mif\u001b[39;00m data_handler\u001b[39m.\u001b[39mshould_sync:\n\u001b[0;32m   1566\u001b[0m         context\u001b[39m.\u001b[39masync_wait()\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    148\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    149\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 150\u001b[0m   \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    151\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\def_function.py:915\u001b[0m, in \u001b[0;36mFunction.__call__\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    912\u001b[0m compiler \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mxla\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mnonXla\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    914\u001b[0m \u001b[39mwith\u001b[39;00m OptionalXlaContext(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_jit_compile):\n\u001b[1;32m--> 915\u001b[0m   result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m    917\u001b[0m new_tracing_count \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexperimental_get_tracing_count()\n\u001b[0;32m    918\u001b[0m without_tracing \u001b[39m=\u001b[39m (tracing_count \u001b[39m==\u001b[39m new_tracing_count)\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\def_function.py:947\u001b[0m, in \u001b[0;36mFunction._call\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    944\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock\u001b[39m.\u001b[39mrelease()\n\u001b[0;32m    945\u001b[0m   \u001b[39m# In this case we have created variables on the first call, so we run the\u001b[39;00m\n\u001b[0;32m    946\u001b[0m   \u001b[39m# defunned version which is guaranteed to never create variables.\u001b[39;00m\n\u001b[1;32m--> 947\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_stateless_fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)  \u001b[39m# pylint: disable=not-callable\u001b[39;00m\n\u001b[0;32m    948\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_stateful_fn \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    949\u001b[0m   \u001b[39m# Release the lock early so that multiple threads can perform the call\u001b[39;00m\n\u001b[0;32m    950\u001b[0m   \u001b[39m# in parallel.\u001b[39;00m\n\u001b[0;32m    951\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock\u001b[39m.\u001b[39mrelease()\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\function.py:2496\u001b[0m, in \u001b[0;36mFunction.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   2493\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock:\n\u001b[0;32m   2494\u001b[0m   (graph_function,\n\u001b[0;32m   2495\u001b[0m    filtered_flat_args) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_maybe_define_function(args, kwargs)\n\u001b[1;32m-> 2496\u001b[0m \u001b[39mreturn\u001b[39;00m graph_function\u001b[39m.\u001b[39;49m_call_flat(\n\u001b[0;32m   2497\u001b[0m     filtered_flat_args, captured_inputs\u001b[39m=\u001b[39;49mgraph_function\u001b[39m.\u001b[39;49mcaptured_inputs)\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\function.py:1862\u001b[0m, in \u001b[0;36mConcreteFunction._call_flat\u001b[1;34m(self, args, captured_inputs, cancellation_manager)\u001b[0m\n\u001b[0;32m   1858\u001b[0m possible_gradient_type \u001b[39m=\u001b[39m gradients_util\u001b[39m.\u001b[39mPossibleTapeGradientTypes(args)\n\u001b[0;32m   1859\u001b[0m \u001b[39mif\u001b[39;00m (possible_gradient_type \u001b[39m==\u001b[39m gradients_util\u001b[39m.\u001b[39mPOSSIBLE_GRADIENT_TYPES_NONE\n\u001b[0;32m   1860\u001b[0m     \u001b[39mand\u001b[39;00m executing_eagerly):\n\u001b[0;32m   1861\u001b[0m   \u001b[39m# No tape is watching; skip to running the function.\u001b[39;00m\n\u001b[1;32m-> 1862\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_build_call_outputs(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_inference_function\u001b[39m.\u001b[39;49mcall(\n\u001b[0;32m   1863\u001b[0m       ctx, args, cancellation_manager\u001b[39m=\u001b[39;49mcancellation_manager))\n\u001b[0;32m   1864\u001b[0m forward_backward \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_select_forward_and_backward_functions(\n\u001b[0;32m   1865\u001b[0m     args,\n\u001b[0;32m   1866\u001b[0m     possible_gradient_type,\n\u001b[0;32m   1867\u001b[0m     executing_eagerly)\n\u001b[0;32m   1868\u001b[0m forward_function, args_with_tangents \u001b[39m=\u001b[39m forward_backward\u001b[39m.\u001b[39mforward()\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\function.py:499\u001b[0m, in \u001b[0;36m_EagerDefinedFunction.call\u001b[1;34m(self, ctx, args, cancellation_manager)\u001b[0m\n\u001b[0;32m    497\u001b[0m \u001b[39mwith\u001b[39;00m _InterpolateFunctionError(\u001b[39mself\u001b[39m):\n\u001b[0;32m    498\u001b[0m   \u001b[39mif\u001b[39;00m cancellation_manager \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 499\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39;49mexecute(\n\u001b[0;32m    500\u001b[0m         \u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msignature\u001b[39m.\u001b[39;49mname),\n\u001b[0;32m    501\u001b[0m         num_outputs\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_num_outputs,\n\u001b[0;32m    502\u001b[0m         inputs\u001b[39m=\u001b[39;49margs,\n\u001b[0;32m    503\u001b[0m         attrs\u001b[39m=\u001b[39;49mattrs,\n\u001b[0;32m    504\u001b[0m         ctx\u001b[39m=\u001b[39;49mctx)\n\u001b[0;32m    505\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    506\u001b[0m     outputs \u001b[39m=\u001b[39m execute\u001b[39m.\u001b[39mexecute_with_cancellation(\n\u001b[0;32m    507\u001b[0m         \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msignature\u001b[39m.\u001b[39mname),\n\u001b[0;32m    508\u001b[0m         num_outputs\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_outputs,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    511\u001b[0m         ctx\u001b[39m=\u001b[39mctx,\n\u001b[0;32m    512\u001b[0m         cancellation_manager\u001b[39m=\u001b[39mcancellation_manager)\n",
-      "File \u001b[1;32mc:\\Users\\Marco\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\eager\\execute.py:54\u001b[0m, in \u001b[0;36mquick_execute\u001b[1;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m   ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m---> 54\u001b[0m   tensors \u001b[39m=\u001b[39m pywrap_tfe\u001b[39m.\u001b[39;49mTFE_Py_Execute(ctx\u001b[39m.\u001b[39;49m_handle, device_name, op_name,\n\u001b[0;32m     55\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[0;32m     56\u001b[0m \u001b[39mexcept\u001b[39;00m core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     57\u001b[0m   \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1965/4651 [===========>..................] - ETA: 2:27:21 - loss: 0.8488 - macro_f1: 0.1566"
      ]
     }
    ],
    "source": [
     "# train the network!\n",
-    "EPOCHS = 5\n",
-    "BATCH_SIZE = 16\n",
+    "EPOCHS = 1\n",
+    "BATCH_SIZE = 64\n",
     "\n",
     "# Define some callbacks to improve training.\n",
     "early_stopping = keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience=10)\n",
     "reduce_lr = keras.callbacks.ReduceLROnPlateau(monitor=\"val_loss\", patience=5)\n",
     "\n",
-    "with tf.device('/GPU:0'):\n",
+    "with tf.device('/CPU:0'):\n",
     "    model.fit(\n",
-    "        train_feats_npy, \n",
-    "        train_labels_npy, \n",
+    "        x=train_feats_npy, \n",
+    "        y=train_labels_npy, \n",
     "        epochs=EPOCHS, \n",
     "        batch_size=BATCH_SIZE, \n",
-    "        validation_data=(val_feats_npy, val_labels_npy), \n",
-    "        callbacks=[early_stopping, reduce_lr])"
+    "        #validation_data=(val_feats_npy, val_labels_npy), \n",
+    "        #callbacks=[early_stopping, reduce_lr]\n",
+    "        )"
    ]
   },
   {
@@ -295,7 +303,7 @@
    "source": [
     "# save model\n",
     "\n",
-    "MODEL_ID = 'model_35x42_sun_night'\n",
+    "MODEL_ID = 'model_64x64'\n",
     "model.save('models/' + MODEL_ID)"
    ]
   }
