Add dataloaders and make bertlike model trainable

--- a/network_training.ipynb
+++ b/network_training.ipynb
@@ -18,11 +18,11 @@
     "from GPUtil import showUtilization as gpu_usage\n",
     "from tqdm import tqdm\n",
     "import time\n",
-    "\n",
+    "from utils.data_loader import data_provider\n",
     "import matplotlib.pyplot as plt\n",
     "from models.bi_lstm import bi_LSTM\n",
-    "# from models.transformer import Transformer\n",
-    "# from models.bert_inspired import BertInspired\n",
+    "from models.transformer import Transformer\n",
+    "from models.bert_inspired import BertInspired\n",
     "from utils.tools import dotdict"
    ]
   },
@@ -46,104 +46,6 @@
     "    numba.select_device(device_num)\n",
     "    print(\"GPU Usage after emptying the cache\")\n",
     "    gpu_usage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1.0 load in datasets\n",
-    "\n",
-    "def load_datasets(data_id, print_out = False, train_device=\"cpu\", val_device=\"cpu\", test_device=\"cpu\"):\n",
-    "    # load files\n",
-    "    train_feats = np.load(\"data/dataset\" + data_id + \"/train_feats\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    train_labels = np.load(\"data/dataset\" + data_id + \"/train_labels\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    test_feats = np.load(\"data/dataset\" + data_id + \"/test_feats\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    test_labels = np.load(\"data/dataset\" + data_id + \"/test_labels\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    val_feats = np.load(\"data/dataset\" + data_id + \"/val_feats\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    val_labels = np.load(\"data/dataset\" + data_id + \"/val_labels\" + data_id + \".npy\", allow_pickle=True)\n",
-    "    # reshape numpy arrays\n",
-    "    train_feats = train_feats.reshape(train_feats.shape[0]*train_feats.shape[1], train_feats.shape[2])\n",
-    "    train_labels = train_labels.reshape(train_labels.shape[0]*train_labels.shape[1], train_labels.shape[2])\n",
-    "    test_feats = test_feats.reshape(test_feats.shape[0]*test_feats.shape[1], test_feats.shape[2])\n",
-    "    test_labels = test_labels.reshape(test_labels.shape[0]*test_labels.shape[1], test_labels.shape[2])\n",
-    "    val_feats = val_feats.reshape(val_feats.shape[0]*val_feats.shape[1], val_feats.shape[2])\n",
-    "    val_labels = val_labels.reshape(val_labels.shape[0]*val_labels.shape[1], val_labels.shape[2])\n",
-    "    \n",
-    "    if print_out:\n",
-    "        print(\"train feats: \", train_feats.shape, \" type: \", type(train_feats))\n",
-    "        print(\"train labels: \", train_labels.shape, \" type: \", type(train_labels))\n",
-    "\n",
-    "        print(\"test feats: \", test_feats.shape, \" type: \", type(test_feats))\n",
-    "        print(\"test labels: \", test_labels.shape, \" type: \", type(test_labels))\n",
-    "\n",
-    "        print(\"val feats: \", val_feats.shape, \" type: \", type(val_feats))\n",
-    "        print(\"val labels: \", val_labels.shape, \" type: \", type(val_labels))\n",
-    "\n",
-    "    # create tensors\n",
-    "    train_feats_tensor = torch.tensor(train_feats, requires_grad=True, dtype=torch.float).to(train_device)\n",
-    "    train_labels_tensor = torch.tensor(train_labels, dtype=torch.float).to(train_device)\n",
-    "\n",
-    "    test_feats_tensor = torch.tensor(test_feats, requires_grad=True, dtype=torch.float).to(test_device)\n",
-    "    test_labels_tensor = torch.tensor(test_labels, dtype=torch.float).to(test_device)\n",
-    "\n",
-    "    val_feats_tensor = torch.tensor(val_feats, requires_grad=True, dtype=torch.float).to(val_device)\n",
-    "    val_labels_tensor = torch.tensor(val_labels, dtype=torch.float).to(val_device)\n",
-    "\n",
-    "    if print_out:\n",
-    "        print (\"train feats tensor: \", train_feats_tensor.shape, \" type: \", type(train_feats_tensor))\n",
-    "        print (\"train labels tensor: \", train_labels_tensor.shape, \" type: \", type(train_labels_tensor))\n",
-    "\n",
-    "        print (\"test feats tensor: \", test_feats_tensor.shape, \" type: \", type(test_feats_tensor))\n",
-    "        print (\"test labels tensor: \", test_labels_tensor.shape, \" type: \", type(test_labels_tensor))\n",
-    "\n",
-    "        print (\"val feats tensor: \", val_feats_tensor.shape, \" type: \", type(val_feats_tensor))\n",
-    "        print (\"val labels tensor: \", val_labels_tensor.shape, \" type: \", type(val_labels_tensor))\n",
-    "            \n",
-    "        if print_out:\n",
-    "            print (\"train_feats_tensor.device:\", train_feats_tensor.get_device())\n",
-    "            print (\"train_labels_tensor.device:\", train_labels_tensor.get_device())\n",
-    "            print (\"test_feats_tensor.device:\", test_feats_tensor.get_device())\n",
-    "            print (\"test_labels_tensor.device:\", test_labels_tensor.get_device())\n",
-    "            print (\"val_feats_tensor.device:\", val_feats_tensor.get_device())\n",
-    "            print (\"val_labels_tensor.device:\", val_labels_tensor.get_device())\n",
-    "        \n",
-    "    return  (train_feats_tensor,\n",
-    "            train_labels_tensor,\n",
-    "            test_feats_tensor,\n",
-    "            test_labels_tensor,\n",
-    "            val_feats_tensor,\n",
-    "            val_labels_tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1.2 set up the data loaders\n",
-    "\n",
-    "# tensor tuple shape: output of load_datasets()\n",
-    "#   [ train_feats_tensor, train_labels_tensor,\n",
-    "#     test_feats_tensor, test_labels_tensor,\n",
-    "#     val_feats_tensor, val_labels_tensor ]\n",
-    "def set_up_dataloaders(batch_size, tensor_tuple):\n",
-    "\n",
-    "    train_dataset = torch.utils.data.TensorDataset(tensor_tuple[0], tensor_tuple[1])\n",
-    "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size, shuffle = True)\n",
-    "\n",
-    "    test_dataset = torch.utils.data.TensorDataset(tensor_tuple[2], tensor_tuple[3])\n",
-    "    test_loader = torch.utils.data.DataLoader(test_dataset, batch_size, shuffle = False)\n",
-    "\n",
-    "    val_dataset = torch.utils.data.TensorDataset(tensor_tuple[4], tensor_tuple[5])\n",
-    "    val_loader = torch.utils.data.DataLoader(val_dataset, batch_size, shuffle = False)\n",
-    "    \n",
-    "    return  (train_dataset, train_loader,\n",
-    "            test_dataset, test_loader,\n",
-    "            val_dataset, val_loader)"
    ]
   },
   {
@@ -200,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_type = \"biLSTM\" # \"bert_inspired\" \"transformer\" or \"biLSTM\"\n",
+    "model_type = \"bert_inspired\" # \"bert_inspired\" \"transformer\" or \"biLSTM\"\n",
     "\n",
     "model = None\n",
     "if model_type == \"biLSTM\":\n",
@@ -215,39 +117,39 @@
     "    # create model\n",
     "    model = bi_LSTM(config)\n",
     "    model.to(device)\n",
-    "# elif model_type == \"transformer\":\n",
-    "#     # 0 = ????\n",
-    "#     config = dotdict({\n",
-    "#         \"enc_in\": 128,\n",
-    "#         \"dec_in\": 128,\n",
-    "#         \"c_out\": 9,\n",
-    "#         \"d_model\": 128,\n",
-    "#         \"dropout\": .05,\n",
-    "#         \"output_attention\": False,\n",
-    "#         \"n_heads\": 8,\n",
-    "#         \"d_ff\": None,\n",
-    "#         \"activation\": \"gelu\",\n",
-    "#         \"e_layers\": 2,\n",
-    "#         \"d_layers\": 1,\n",
-    "#         \"model_type\": model_type\n",
-    "#     })\n",
-    "#     model = Transformer(config)\n",
-    "#     model.to(device)\n",
-    "# elif model_type == \"bert_inspired\":\n",
-    "#     config = dotdict({\n",
-    "#         \"enc_in\": 128,\n",
-    "#         \"c_out\": 9,\n",
-    "#         \"d_model\": 128,\n",
-    "#         \"dropout\": .05,\n",
-    "#         \"output_attention\": False,\n",
-    "#         \"n_heads\": 8,\n",
-    "#         \"d_ff\": None,\n",
-    "#         \"activation\": \"gelu\",\n",
-    "#         \"e_layers\": 4,\n",
-    "#         \"model_type\": model_type\n",
-    "#     })\n",
-    "#     model = BertInspired(config)\n",
-    "#     model.to(device)\n",
+    "elif model_type == \"transformer\":\n",
+    "    # 0 = ????\n",
+    "    config = dotdict({\n",
+    "        \"enc_in\": 128,\n",
+    "        \"dec_in\": 128,\n",
+    "        \"c_out\": 9,\n",
+    "        \"d_model\": 128,\n",
+    "        \"dropout\": .05,\n",
+    "        \"output_attention\": False,\n",
+    "        \"n_heads\": 8,\n",
+    "        \"d_ff\": None,\n",
+    "        \"activation\": \"gelu\",\n",
+    "        \"e_layers\": 2,\n",
+    "        \"d_layers\": 1,\n",
+    "        \"model_type\": model_type\n",
+    "    })\n",
+    "    model = Transformer(config)\n",
+    "    model.to(device)\n",
+    "elif model_type == \"bert_inspired\":\n",
+    "    config = dotdict({\n",
+    "        \"enc_in\": (32, 16), # (#windows, # mel filters)\n",
+    "        \"c_out\": 9,\n",
+    "        \"d_model\": 512,\n",
+    "        \"dropout\": .05,\n",
+    "        \"output_attention\": False,\n",
+    "        \"n_heads\": 8,\n",
+    "        \"d_ff\": None,\n",
+    "        \"activation\": \"gelu\",\n",
+    "        \"e_layers\": 12,\n",
+    "        \"model_type\": model_type\n",
+    "    })\n",
+    "    model = BertInspired(config)\n",
+    "    model.to(device)\n",
     "\n",
     "assert model is not None, \"Didn't select a valid model\""
    ]
@@ -263,14 +165,26 @@
     "# free_gpu_cache()\n",
     "\n",
     "# training parameters\n",
-    "batch_size = 32\n",
-    "learning_rate = 0.001\n",
+    "batch_size = 512\n",
+    "learning_rate = 0.0000001\n",
     "num_epochs = 5\n",
     "\n",
     "# get dataloaders\n",
-    "train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
-    "    batch_size, load_datasets(data_id=\"_5s_50hz\", print_out=True)\n",
-    ")\n",
+    "# train_dataset, train_loader, test_dataset, test_loader, val_dataset, val_loader  = set_up_dataloaders(\n",
+    "#     batch_size, load_datasets(data_id=\"_5s_50hz\", print_out=True)\n",
+    "# )\n",
+    "\n",
+    "config = dotdict({\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"num_workers\": 0,\n",
+    "        \"seq_len\": 9,\n",
+    "        \"data_id\": \"32x16\"\n",
+    "    })\n",
+    "\n",
+    "train_dataset, train_loader = data_provider(config, flag=\"train\")\n",
+    "val_dataset, val_loader = data_provider(config, flag=\"val\")\n",
+    "test_dataset, test_loader = data_provider(config, flag=\"test\")\n",
+    "# seq_length x num_windows x num_mel_filters\n",
     "\n",
     "# print (\"device name: \", torch.cuda.get_device_name(0))\n",
     "# print (\"model.type: \", myModel.model_type)\n",
@@ -286,52 +200,44 @@
     "accuracy_list = []\n",
     "loss_list = []\n",
     "\n",
-    "# perform epochs\n",
+    "# Perform epochs\n",
     "startTime = time.time()\n",
     "min_valid_loss = np.inf\n",
     "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
     "    total = 0\n",
     "    correct = 0\n",
-    "    total_loss = 0\n",
+    "    train_loss = 0.0\n",
     "    for batch_index, (feats, labels) in enumerate(tqdm(train_loader)):\n",
-    "        start = time.time()\n",
+    "        feats = feats.float().to(device)\n",
+    "        labels = labels.float().to(device)\n",
+    "\n",
     "        optimizer.zero_grad()\n",
-    "        # place data on GPU\n",
-    "        feats = feats.to(device).squeeze(1)\n",
-    "        labels = labels.to(device)\n",
-    "        print(\"Time consumed in moving feats&labels to gpu: \", time.time() - start)\n",
-    "        print (\"feats shape: \", feats.shape)\n",
-    "        print (\"labels shape: \", labels.shape)\n",
-    "        # print (\"labels: \", labels)\n",
     "        \n",
-    "        # forward\n",
-    "        start = time.time()\n",
+    "        # Forward\n",
     "        output = model(feats)\n",
     "        loss = criterion(output, labels)\n",
-    "        print(\"Time consumed in forward: \", time.time() - start)\n",
-    "        #backward\n",
-    "        start = time.time()\n",
+    "        \n",
+    "        # Backward\n",
     "        loss.backward()\n",
-    "        print(\"Time consumed in backward: \", time.time() - start)\n",
-    "        #gradient descent\n",
-    "        start = time.time()\n",
+    "        \n",
     "        optimizer.step()\n",
-    "        total_loss += loss.item()\n",
-    "        print(\"Time consumed in step: \", time.time() - start)\n",
+    "        train_loss += loss.item()\n",
+    "    train_loss /= len(train_loader)\n",
     "    valid_loss = 0.0\n",
     "    model.eval()     # Optional when not using Model Specific layer\n",
     "    for batch_index, (feats, labels) in enumerate(tqdm(val_loader)):\n",
     "        # Transfer Data to GPU if available\n",
-    "        feats = feats.to(device)\n",
-    "        labels = labels.to(device)\n",
+    "        feats = feats.float().to(device)\n",
+    "        labels = labels.float().to(device)\n",
     "        output = model(feats)\n",
     "        loss = criterion(output,labels)\n",
     "        # Calculate Loss\n",
     "        valid_loss += loss.item()\n",
-    "    print(f'Epoch {epoch} \\t\\t Training Loss: {total_loss/ len(train_loader)} \\t\\t Validation Loss: {valid_loss / len(val_loader)}') \n",
+    "    valid_loss /= len(val_loader)\n",
+    "    print(f\"Epoch {epoch}\\t\\tTraining Loss: {train_loss}\\t\\tValidation Loss: {valid_loss}\") \n",
     "    if min_valid_loss > valid_loss:\n",
-    "        print(f'Validation Loss Decreased({min_valid_loss:.6f\\\n",
-    "        }--->{valid_loss:.6f}) \\t Saving The Model')\n",
+    "        print(f\"Validation Loss Decreased({min_valid_loss:.6f}--->{valid_loss:.6f})\\tSaving The Model\")\n",
     "        min_valid_loss = valid_loss\n",
     "         \n",
     "        # Saving State Dict\n",
@@ -358,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.6 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -372,11 +278,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2eb717040054f9e1cd6390da57b4c3f6de62338193843f816e8f12a4d5407ba0"
+    "hash": "da06df106b6ebc505395780f3c76810614ede012a8d0e2bc265d4156a4243031"
    }
   }
  },
